the first chapter was finished

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <link rel="stylesheet" href="style.css" charset="utf-8">
   </head>
   <body>
+    <ul>
+      <li data-attr="lang">Python</li>
+      <li data-attr="kernel">Linux</li>
+      <li data-attr="style">Hacking</li>
+    </ul>
     <div class="topbar">
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Sports</a></li>
-          <li><a href="#">-News</a></li>
+          <li><a href="#">  News</a></li>
         </ul>
       </nav>
       <ul>
@@ -46,6 +51,9 @@
         </p>
 
         <footer class="article__footer">
+          <p>
+            prueba css
+          </p>
         </footer>
 
       </article>
