--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" charset="utf-8">
   </head>
   <body>
+    <li>A mi me la suda todo</li>
     <ul>
       <li data-attr="lang">Python</li>
       <li data-attr="kernel">Linux</li>
@@ -40,7 +41,7 @@
       <article class="article">
 
         <header>
-          <h3 class="article__header">Article Title</h3>
+          <h3 class="article__header">article__header</h3>
         </header>
         <p class="text">
           ILM runs a batch processing environment capable of modeling,
@@ -52,7 +53,7 @@
 
         <footer class="article__footer">
           <p>
-            prueba css
+            article__footer
           </p>
         </footer>
 
